force-app/main/default/objects/AskSF_Domain__mdt/AskSF_Domain__mdt.object-meta.xml
<CustomObject>
    <label>AskSF Domain</label>
    <pluralLabel>AskSF Domains</pluralLabel>
</CustomObject>