force-app/main/default/objects/AskSF_Domain__mdt/fields/AllowedDimensions__c.field-meta.xml
<CustomField>
    <fullName>AllowedDimensions__c</fullName>
    <label>Allowed Dimensions</label>
    <description>CSV list of groupable/filterable field API names for this domain</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>