force-app/main/default/objects/AskSF_Domain__mdt/fields/AllowedMeasures__c.field-meta.xml
<CustomField>
    <fullName>AllowedMeasures__c</fullName>
    <label>Allowed Measures</label>
    <description>CSV list of summable/aggregatable field API names for this domain</description>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>