force-app/main/default/objects/AskSF_Domain__mdt/fields/DefaultTimegrain__c.field-meta.xml
<CustomField>
    <fullName>DefaultTimegrain__c</fullName>
    <label>Default Timegrain</label>
    <description>Default time granularity for this domain: MONTH, WEEK, QUARTER, DAY</description>
    <type>Text</type>
    <length>40</length>
</CustomField>