force-app/main/default/objects/AskSF_Domain__mdt/fields/DomainKeywords__c.field-meta.xml
<CustomField>
    <fullName>DomainKeywords__c</fullName>
    <label>Domain Keywords</label>
    <description>CSV of keywords for future domain classification (Phase 4 planner)</description>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>