force-app/main/default/objects/AskSF_Domain__mdt/fields/MappingKey__c.field-meta.xml
<CustomField>
    <fullName>MappingKey__c</fullName>
    <label>Mapping Key</label>
    <description>Key into static resource mapping dictionary for domain-specific field translations</description>
    <type>Text</type>
    <length>100</length>
</CustomField>