force-app/main/default/objects/AskSF_Domain__mdt/fields/Parity__c.field-meta.xml
<CustomField>
    <fullName>Parity__c</fullName>
    <label>Parity</label>
    <description>How closely Ask SF answers match Tableau dashboard values</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXACT</fullName>
                <default>true</default>
                <label>EXACT</label>
            </value>
            <value>
                <fullName>APPROXIMATE</fullName>
            </value>
            <value>
                <fullName>NOT_SUPPORTED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>