force-app/main/default/objects/AskSF_Domain__mdt/fields/PrimaryDateField__c.field-meta.xml
<CustomField>
    <fullName>PrimaryDateField__c</fullName>
    <label>Primary Date Field</label>
    <description>Default date filter field for this domain (e.g., Revenue_Booked_On__c, CreatedDate)</description>
    <type>Text</type>
    <length>80</length>
</CustomField>