force-app/main/default/objects/AskSF_Domain__mdt/fields/PrimaryObject__c.field-meta.xml
<CustomField>
    <fullName>PrimaryObject__c</fullName>
    <label>Primary Object</label>
    <description>Main Salesforce object API name for this domain (e.g., accounts_revenue__c, Opportunity)</description>
    <type>Text</type>
    <length>80</length>
</CustomField>