force-app/main/default/objects/AskSF_Domain__mdt/fields/Queryable__c.field-meta.xml
<CustomField>
    <fullName>Queryable__c</fullName>
    <label>Queryable</label>
    <description>Whether this domain can be queried via SOQL. False means return UserMessageTemplate instead.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>