force-app/main/default/objects/AskSF_Domain__mdt/fields/RequiresMapping__c.field-meta.xml
<CustomField>
    <fullName>RequiresMapping__c</fullName>
    <label>Requires Mapping</label>
    <description>Whether this domain needs additional field/value mapping from a static resource</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>