force-app/main/default/objects/AskSF_Domain__mdt/fields/ResponseMode__c.field-meta.xml
<CustomField>
    <fullName>ResponseMode__c</fullName>
    <label>Response Mode</label>
    <description>How Ask SF should respond: DATA (full query+summary), INSIGHT (query+approximate note), EXPLAIN_ONLY (no query, just explanation)</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DATA</fullName>
                <default>true</default>
                <label>DATA</label>
            </value>
            <value>
                <fullName>INSIGHT</fullName>
            </value>
            <value>
                <fullName>EXPLAIN_ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>