force-app/main/default/objects/AskSF_Domain__mdt/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <description>Priority when multiple domains match the same object (lower = higher priority)</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>