force-app/main/default/objects/AskSF_Domain__mdt/fields/SourceType__c.field-meta.xml
<CustomField>
    <fullName>SourceType__c</fullName>
    <label>Source Type</label>
    <description>Where the data for this domain lives: Salesforce, Tableau Prep, or external system</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIVE_SF</fullName>
                <default>true</default>
                <label>LIVE_SF</label>
            </value>
            <value>
                <fullName>TABLEAU_PREP</fullName>
            </value>
            <value>
                <fullName>EXTERNAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>