force-app/main/default/objects/AskSF_Domain__mdt/fields/UserMessageTemplate__c.field-meta.xml
<CustomField>
    <fullName>UserMessageTemplate__c</fullName>
    <label>User Message Template</label>
    <description>Fallback message shown when domain is not queryable via SOQL</description>
    <type>LongTextArea</type>
    <length>5000</length>
</CustomField>